fixed input-chat on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,10 +58,11 @@
 
 #input-chat {
     font-size: 1.1rem;
-    width: 85%;
+    width: 90%;
     margin-right: 1%;
     height: 48px !important;
 }
+
 
 #confirm-topic{
     position: static;
